deploy/buildversion/deployment.yaml
apiVersion: apps/v1
kind: Deployment
#https://andrewlock.net/deploying-asp-net-core-applications-to-kubernetes-part-6-adding-health-checks-with-liveness-readiness-and-startup-probes/
#https://dzone.com/articles/health-checks-with-aspnet-core-and-kubernetes

metadata:
  name: buildversion
  labels:
    app: buildversion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: buildversion
  template:
    metadata:
      labels:
        app: buildversion
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      volumes:
        - name: buildversion-storage
          persistentVolumeClaim:
            claimName: buildversion-claim
      containers:
      - name: buildversion
        image: registry:5000/buildversion:latest
        imagePullPolicy: Always
        #env:
        #- name: NATS__Url
        #  value: nats://nats.nats.svc:4222
        #- name: NATS__Servers__0
        #  value: nats://nats.nats.svc:4222
        ports:
        - containerPort: 80
          name: http
        #- containerPort: 443
        #  name: https
        #livenessProbe:
        #  httpGet:
        #    path: /healthz
        #    port: http
        #  initialDelaySeconds: 10
        #  timeoutSeconds: 5
        #readinessProbe:
        #  httpGet:
        #    path: /healthz
        #    port: http
        #  initialDelaySeconds: 10
        #  timeoutSeconds: 5
        resources:
          requests:
            memory: "32Mi"
            cpu: "16m"
          #limits:
          #  memory: "128Mi"
          #  cpu: "512m"
        volumeMounts:
          - mountPath: "/data"
            name: buildversion-storage
